--- a/src/app/components/users-details/users-details.component.html
+++ b/src/app/components/users-details/users-details.component.html
@@ -1,9 +1,10 @@
-<h3>PhoneBook : {{user.first_name}} {{user.last_name}}</h3><br>
+<h3>PhoneBook of {{user.first_name}} {{user.last_name}} <button class="btn btn-warning" style="float: right;" [routerLink]="['/users']">Back</button></h3><br>
 <p>Email: {{user.email}}</p>
 <p>Contacts:</p>
 <hr>
 <div *ngFor="let contact of user.contacts">
     <ul>
+        <li>Name: {{contact.name}}</li>
         <li>Phone No: {{contact.phone_no}}</li>
         <li>Type: {{contact.type}}</li>
         <li>Plan: {{contact.plan}}</li>
