add Create new user function

--- a/src/app/components/users-add/users-add.component.html
+++ b/src/app/components/users-add/users-add.component.html
@@ -1,1 +1,44 @@
-<p>users-add works!</p>
+<h3>Add New User <button class="btn btn-warning" style="float: right;" [routerLink]="['/users']">Back</button></h3><br>
+<hr>
+<div class="container">
+    <form [formGroup]="usersForm" (ngSubmit)="onFormSubmit()">
+        <div class="row">
+            <div class="col-sm-2">
+                <label>First Name:</label>
+            </div>
+            <div class="col" style="float: left;">
+                <input type="text" formControlName="first_name">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-2">
+                <label>Last Name:</label>
+            </div>
+            <div class="col" style="float: left;">
+                <input type="text" formControlName="last_name">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-2">
+                <label>Email:</label>
+            </div>
+            <div class="col" style="float: left;">
+                <input type="text" formControlName="email">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-2">
+                <label>Password:</label>
+            </div>
+            <div class="col" style="float: left;">
+                <input type="password" formControlName="password">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-2"></div>
+            <div class="col">
+                <button class="btn btn-primary" type="submit">Register</button>&nbsp;<button class="btn btn-danger" type="reset">Clear</button>
+            </div>
+        </div>
+    </form>
+</div>
