--- a/src/app/components/users-details/users-details.component.html
+++ b/src/app/components/users-details/users-details.component.html
@@ -1,6 +1,6 @@
 <h3>PhoneBook of {{user.first_name}} {{user.last_name}} <button class="btn btn-warning" style="float: right;" [routerLink]="['/users']">Back</button></h3><br>
 <p>Email: {{user.email}}</p>
-<p>Contacts:</p>
+<p>Contacts: <button class="btn btn-warning" [routerLink]="['/users/add-contact', user._id]">Add</button></p>
 <hr>
 <div *ngFor="let contact of user.contacts">
     <ul>
