--- a/src/app/components/users-details/users-details.component.html
+++ b/src/app/components/users-details/users-details.component.html
@@ -14,6 +14,6 @@
     </div>
     <div class="col">
         <button class="btn btn-primary mb-2">Edit</button><br>
-        <button class="btn btn-danger">Delete</button>
+        <button class="btn btn-danger" (click)="deleteContact(contact._id)" >Delete</button>
     </div>
 </div>
